package practica3.ejercicio3;

public interface Connection {

	public String sendData(String data, int crc);
	public String pict();
	
}
