package practica3.ejercicio3;

public class Ringer {

	public void ring() {
		
	}
	
}
